# AI-Evolution-Simulator

./: .gitignore  Cargo.toml  OPEN_ENDED_EVOLUTION_EVALUATION.md  PROMPT_GAP_ANALYSIS.md  README.md
.claude/: settings.local.json
src/: brain.rs  camera.rs  combat.rs  config.rs  energy.rs  entity.rs  environment.rs  genome.rs  main.rs  particles.rs  physics.rs  post_processing.rs  qa.rs  renderer.rs  reporting.rs  reproduction.rs  save_load.rs  sensory.rs  signals.rs  simulation.rs  spatial_hash.rs  stats.rs  visual.rs  world.rs
src/ui/: graphs.rs  inspector.rs  minimap.rs  mod.rs  neural_viz.rs  settings.rs  toolbar.rs
