[package]
name = "genesis"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
egui-macroquad = "0.17"
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
noise = "0.9"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
